<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.skyrien.lifeindays.AboutActivity">


    <TextView android:text="@string/app_name" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textviewAppName"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView android:text="@string/textview_author" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textviewAuthor"
        android:layout_below="@+id/textviewAppName"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView android:text="@string/textviewVersion" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textviewVersion"
        android:layout_below="@+id/textviewAuthor"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:text="0.0"
        android:id="@+id/textviewVersionNumber"
        android:layout_alignTop="@+id/textviewVersion"
        android:layout_toRightOf="@+id/textviewVersion"
        android:layout_toEndOf="@+id/textviewVersion"
        android:layout_marginLeft="16dp"
        />

    <TextView android:text="@string/textviewDescription" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textviewDescription"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:layout_below="@+id/textviewVersion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"/>


</RelativeLayout>
